--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@ footer{
         <nav>
           <ul>
             <li class="current"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
+            <li><a href="about file.html">About</a></li>
+            <li><a href="service.html">Services</a></li>
           </ul>
         </nav>
       </div>
