--- a/service.html
+++ b/service.html
@@ -228,7 +228,7 @@ footer{
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="about file.html">About</a></li>
             <li class="current"><a href="services.html">Services</a></li>
           </ul>
         </nav>
