--- a/about file.html
+++ b/about file.html
@@ -227,8 +227,8 @@ footer{
         </div>
         <nav>
           <ul>
-            <li><a href="./home file.html">Home</a></li>
-            <li class="current"><a href="about.html">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="current"><a href="about file.html">About</a></li>
             <li><a href="./service.html">Services</a></li>
           </ul>
         </nav>
