--- a/service.html
+++ b/service.html
@@ -229,7 +229,7 @@ footer{
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about file.html">About</a></li>
-            <li class="current"><a href="services.html">Services</a></li>
+            <li class="current"><a href="service.html">Services</a></li>
           </ul>
         </nav>
       </div>
