--- a/about file.html
+++ b/about file.html
@@ -229,7 +229,7 @@ footer{
           <ul>
             <li><a href="index.html">Home</a></li>
             <li class="current"><a href="about file.html">About</a></li>
-            <li><a href="./service.html">Services</a></li>
+            <li><a href="service.html">Services</a></li>
           </ul>
         </nav>
       </div>
