--- a/service.html
+++ b/service.html
@@ -257,7 +257,7 @@ footer{
 						  <p>Pricing:$15 to $50</p>
             </li>
             <li>
-              <video src="video.mp4" type="video/mp4" width="225px" controls>video</video>
+              <video width="225px" controls><source src="video.mp4" type="video/mp4">video</video>
               <h3>DC And Lag Effects</h3>
               <p>.......</p>
 						  <p>Pricing: $30 to $60</p>
