--- a/service.html
+++ b/service.html
@@ -256,8 +256,10 @@ footer{
               <p>We make different types of Swords</p>
 						  <p>Pricing:$15 to $50</p>
             </li>
+		  <video width="225px" height="200px" autoplay>
+		      <source src="video.mp4" type="video/mp4">
             <li>
-              <video width="225px" height="200px" controls>
+              <video width="225px" height="200px" autoplay>
 		      <source src="video.mp4" type="video/mp4">
 		      video</video>
               <h3>DC And Lag Effects</h3>
