--- a/index.html
+++ b/index.html
@@ -255,17 +255,17 @@ footer{
     <section id="boxes">
       <div class="container">
         <div class="box">
-          <img src="./3d item.jpg">
+          <img src="./3d item.jpg" style="max-width: 100%;">
           <h3><font color="white">3D ITEMS</font></h3>
           <p>....</p>
         </div>
         <div class="box">
-          <img src="./top up.png">
+          <img src="./top up.png" style="max-width: 100%;">
           <h3><font color="white">TOP-UP & PREMIUM</font></h3>
           <p>::::</p>
         </div>
         <div class="box">
-          <img src="./membership.jpg">
+          <img src="./membership.jpg" style="max-width: 100%;">
           <h3><font color="white">VIP SUBSCRIPTION</font></h3>
           <p>....</p>
         </div>
