--- a/service.html
+++ b/service.html
@@ -255,19 +255,17 @@ footer{
               <h3>Swords</h3>
               <p>We make different types of Swords</p>
 						  <p>Pricing:$15 to $50</p>
-            </li>
-		  <video width="225px" height="200px" autoplay>
-		      <source src="video.mp4" type="video/mp4">
+	    </li>
             <li>
-              <video width= "225px" height= "200px" autoplay>
-		      <source src= "video.mp4" type= "video/mp4">
+              <video width="225px" height="200px" autoplay>
+		      <source src="video.mp4" type="video/mp4">
 		      video</video>
               <h3>DC And Lag Effects</h3>
               <p>Lag in game is caused by high latency, which means there's a delay between the button you press and the on-screen response</p>
 						  <p>Pricing: $30 to $60</p>
             </li>
             <li>
-               <img src="vip.jpg" alt="vip" width="90px">
+               <img src="./vip.jpg" alt="vip" width="90px">
               <h3>VIP Items</h3>
               <p>VIPs are typically recognised and treated with special privileges and tailored services.</p>
 						  <p>Pricing: $150 to $250</p>
