--- a/about file.html
+++ b/about file.html
@@ -93,7 +93,7 @@ header a:hover{
 /* Showcase */
 #showcase{
   min-height:400px;
-  background:url('../img/showcase.jpg') no-repeat;
+  background:url("img/showcase.jpg") no-repeat;
   background-position: center;
   background-size: cover;
   text-align:center;
@@ -255,7 +255,11 @@ Play the Universe. <a href= "https://play.google.com/store/apps/details?id=me.ze
 
 Welcome to <mark>ZEPETO</mark>, a place where virtually anything is possible!
           </p>
-          <p class="dark">.....
+          <p class="dark">[Become a Creator]
+Don't see something you like in our shop? Bring your creativity to life by designing and selling new fashion or lifestyle items yourself in ZEPETO Studio!
+Or build your own games and worlds for other users to play.<br>
+		  [Join ZEPETO Premium]
+Join our premium membership program to receive special benefits like priority review for created items, 70 monthly ZEM credits, exclusive items and more.
           </p>
         </article>
 
