--- a/service.html
+++ b/service.html
@@ -257,9 +257,7 @@ footer{
 						  <p>Pricing:$15 to $50</p>
 	    </li>
             <li>
-              <video width="225px" height="200px" autoplay>
-		      <source src="video.mp4" type="video/mp4">
-		      </video>
+              <img src="./vipppp.jpg" alt="Lag" width="90px">
               <h3>DC And Lag Effects</h3>
               <p>Lag in game is caused by high latency, which means there's a delay between the button you press and the on-screen response</p>
 						  <p>Pricing: $30 to $60</p>
