--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Affordable and professional web design">
 	  <meta name="keywords" content="web design, affordable web design, professional web design">
   	<meta name="author" content="Brad Traversy">
-    <title>The Outlaw Corporation | Welcome</title>
+    <title>THE-OUTLAW Corporation | Welcome</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="img/favicon.png">
     <style>
