--- a/about file.html
+++ b/about file.html
@@ -255,7 +255,7 @@ Play the Universe. <a href= "https://play.google.com/store/apps/details?id=me.ze
 
 Welcome to <mark>ZEPETO</mark>, a place where virtually anything is possible!
           </p>
-          <p class="dark"><center>[Become a Creator]</center>
+          <center><p class="dark">[Become a Creator]</center>
 Don't see something you like in our shop?<br> Bring your creativity to life by designing and selling new fashion or lifestyle items yourself in ZEPETO Studio!
 Or build your own games and worlds for other users to play.<hr><br>
 		 <center>[Join ZEPETO Premium]</center>
