--- a/service.html
+++ b/service.html
@@ -93,7 +93,7 @@ header a:hover{
 /* Showcase */
 #showcase{
   min-height:400px;
-  background:url("showcase.jpg") no-repeat;
+  background:url("background.jpg") no-repeat;
   background-position: center;
   background-size: cover;
   text-align:center;
