--- a/about file.html
+++ b/about file.html
@@ -258,10 +258,11 @@ Welcome to <mark>ZEPETO</mark>, a place where virtually anything is possible!
           <div class="dark">
 		<p><center>[Become a Creator]</center>
 Don't see something you like in our shop?<br> Bring your creativity to life by designing and selling new fashion or lifestyle items yourself in ZEPETO Studio!
-Or build your own games and worlds for other users to play.<hr><br></div>
+Or build your own games and worlds for other users to play.<hr><br>
 		 <center>[Join ZEPETO Premium]</center>
 Join our premium membership program to receive special benefits like priority review for created items, 70 monthly ZEM credits, exclusive items and more.
           </p>
+	  </div>
         </article>
 
         <aside id="sidebar">
