--- a/service.html
+++ b/service.html
@@ -142,7 +142,7 @@ header a:hover{
   text-align: center;
   width:30%;
   padding:10px;
-	background-image: url(./background.jpg);
+	background-image: url("background.jpg");
 }
 
 #boxes .box img{
